--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,26 @@
 <resources>
     <string name="app_name">tba-android-beta_1.3</string>
+    <string name="action_logout">Sortir</string>
+    <string name="action_settings">Configuració</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">\#TrollBlockNet App</string>
+    <string name="nav_header_subtitle">Versió Beta 1.3</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Configuració</string>
-    <string name="lists">Llistats</string>
-    <string name="report">Reportar Trolls</string>
-    <string name="academy">Bones Pràctiques</string>
-    <string name="faq">FAQ\'s</string>
-    <string name="manage">Configuració</string>
-    <string name="tools">Eines i Utilitats</string>
-    <string name="action_logout">Sortir</string>
-    <string name="cancel">cancel</string>
-    <string name="fire">fire</string>
-    <string name="dialog_fire_missiles">dialog fire missiles</string>
-    <string name="dialog_title">Troll Reportat. Gràcies!</string>
-    <string name="dialog_message">Troll Reportat. Gràcies!</string>
-    <string name="certify">Verificar Trolls</string>
-    <string name="contact">Contactan\'s</string>
-    <string name="share">Recomana aquesta App</string>
+    <string name="nav_lists">Llistats</string>
+    <string name="nav_report">Reportar Trolls</string>
+    <string name="nav_certify">Verificar Trolls</string>
+    <string name="nav_academy">Bones Pràctiques</string>
+    <string name="nav_faq">FAQ\'s</string>
+    <string name="nav_tools">Eines i Utilitats</string>
+    <string name="nav_share">Recomana aquesta App</string>
+    <string name="nav_contact">Contactan\'s</string>
+    <string name="dialog_report_success_title">Troll Reportat. Gràcies!</string>
+    <string name="dialog_report_success_message">Troll Reportat. Gràcies!</string>
+    <string name="fragment_report_pas1">1. Insereix la URL del Tweet o perfil que vulguis reportar:</string>
+    <string name="fragment_report_pas2">2. Proposa una llista:</string>
+    <string name="fragment_report_pas3">3. Insereix un comentari (Opcional):</string>
+    <string name="fragment_report_bullet1_trolls">Trolls / Infiltrats</string>
+    <string name="fragment_report_bullet2_xusma">Persones non-grates</string>
+    <string name="fragment_report_bullet3_ibex">Col·laboradors IBEX-35</string>
 </resources>
