--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="action_settings">Configuració</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">\#TrollBlockNet App</string>
-    <string name="nav_header_subtitle">Versió Beta 1.3</string>
+    <string name="nav_header_title">\#TrollBlockNet App (Versió Beta 1.3)</string>
+    <string name="nav_header_subtitle">La xarxa p2p anti-trolls de la #eRepública</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="nav_lists">Llistats</string>
     <string name="nav_report">Reportar Trolls</string>
@@ -17,7 +17,7 @@
     <string name="nav_contact">Contactan\'s</string>
     <string name="dialog_report_success_title">Troll Reportat. Gràcies!</string>
     <string name="dialog_report_success_message">Troll Reportat. Gràcies!</string>
-    <string name="fragment_report_pas1">1. Insereix la URL del Tweet o perfil que vulguis reportar:</string>
+    <string name="fragment_report_pas1">1. Indica un Tweet del perfil que vulguis reportar:</string>
     <string name="fragment_report_pas2">2. Proposa una llista:</string>
     <string name="fragment_report_pas3">3. Insereix un comentari (Opcional):</string>
     <string name="fragment_report_bullet1_trolls">Trolls / Infiltrats</string>
